{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 90,
  "lineage": "e8b5a27a-74a7-d21a-0e60-032f695e4400",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_eip",
      "name": "udemy_demo_eip",
      "provider": "module.compute.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0276702108af958ff",
            "arn": "arn:aws:ec2:ap-southeast-1:851725327027:elastic-ip/eipalloc-0276702108af958ff",
            "association_id": "eipassoc-0efe4a7eb73dff5d7",
            "domain": "vpc",
            "id": "eipalloc-0276702108af958ff",
            "instance": "i-0ef05f87bd4be0e3d",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-03a768a81704d8325",
            "private_dns": "ip-10-0-1-72.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.72",
            "public_dns": "ec2-18-138-203-147.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.138.203.147",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Udemy demo EIP for EC2"
            },
            "tags_all": {
              "Name": "Udemy demo EIP for EC2"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_key_pair.udemy-keypair",
            "module.compute.aws_instance.udemy_demo_instance",
            "module.networking.aws_subnet.public_subnet_1",
            "module.networking.aws_subnet.public_subnet_2",
            "module.networking.aws_vpc.my_vpc",
            "module.security.aws_security_group.public_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "udemy_demo_instance",
      "provider": "module.compute.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05b46bc4327cf9d99",
            "arn": "arn:aws:ec2:ap-southeast-1:851725327027:instance/i-0ef05f87bd4be0e3d",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ef05f87bd4be0e3d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "udemy-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03a768a81704d8325",
            "private_dns": "ip-10-0-1-72.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.72",
            "public_dns": "ec2-18-138-203-147.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.138.203.147",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d8c4ae62b2645288",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c6ecc491e63061f0",
            "tags": {
              "Name": "Udemy demo EC2 instance"
            },
            "tags_all": {
              "Name": "Udemy demo EC2 instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04783f74467dd9175"
            ]
          },
          "dependencies": [
            "aws_key_pair.udemy-keypair",
            "module.networking.aws_subnet.public_subnet_1",
            "module.networking.aws_subnet.public_subnet_2",
            "module.networking.aws_vpc.my_vpc",
            "module.security.aws_security_group.public_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06e5c82fd19d8ce79",
            "arn": "arn:aws:ec2:ap-southeast-1:851725327027:elastic-ip/eipalloc-06e5c82fd19d8ce79",
            "association_id": "eipassoc-037e1b5df80e4280a",
            "domain": "vpc",
            "id": "eipalloc-06e5c82fd19d8ce79",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0dbba28f07fdcb836",
            "private_dns": "ip-10-0-1-17.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.17",
            "public_dns": "ec2-13-251-195-65.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.251.195.65",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Udemy demo Nat EIP"
            },
            "tags_all": {
              "Name": "Udemy demo Nat EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851725327027:internet-gateway/igw-075ff5d993d601e05",
            "id": "igw-075ff5d993d601e05",
            "owner_id": "851725327027",
            "tags": {
              "Name": "Udemy demo Internet gateway"
            },
            "tags_all": {
              "Name": "Udemy demo Internet gateway"
            },
            "vpc_id": "vpc-04ac9d9c2a5bcfed8"
          },
          "dependencies": [
            "module.networking.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06e5c82fd19d8ce79",
            "association_id": "eipassoc-037e1b5df80e4280a",
            "connectivity_type": "public",
            "id": "nat-03b774380b9342d79",
            "network_interface_id": "eni-0dbba28f07fdcb836",
            "private_ip": "10.0.1.17",
            "public_ip": "13.251.195.65",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c6ecc491e63061f0",
            "tags": {
              "Name": "Udemy demo Nat gateway"
            },
            "tags_all": {
              "Name": "Udemy demo Nat gateway"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_subnet.public_subnet_1",
            "module.networking.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b79c73eaf5c75ac51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-03b774380b9342d79",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b79c73eaf5c75ac5",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_nat_gateway.nat_gateway",
            "module.networking.aws_route_table.private_route_table",
            "module.networking.aws_subnet.public_subnet_1",
            "module.networking.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-075ff5d993d601e05",
            "id": "r-rtb-0730a49fa8b89d3ac1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0730a49fa8b89d3ac",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.my_igw",
            "module.networking.aws_route_table.public_route_table",
            "module.networking.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851725327027:route-table/rtb-0b79c73eaf5c75ac5",
            "id": "rtb-0b79c73eaf5c75ac5",
            "owner_id": "851725327027",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03b774380b9342d79",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Udemy Private RT8"
            },
            "tags_all": {
              "Name": "Udemy Private RT8"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ac9d9c2a5bcfed8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851725327027:route-table/rtb-0730a49fa8b89d3ac",
            "id": "rtb-0730a49fa8b89d3ac",
            "owner_id": "851725327027",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-075ff5d993d601e05",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Udemy Public RT8"
            },
            "tags_all": {
              "Name": "Udemy Public RT8"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ac9d9c2a5bcfed8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association_1",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eb0e9e6bec0fcc40",
            "route_table_id": "rtb-0b79c73eaf5c75ac5",
            "subnet_id": "subnet-08ae6d038f636f2f6"
          },
          "dependencies": [
            "module.networking.aws_route_table.private_route_table",
            "module.networking.aws_subnet.private_subnet_1",
            "module.networking.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association_2",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e8ee153ec7750e67",
            "route_table_id": "rtb-0b79c73eaf5c75ac5",
            "subnet_id": "subnet-09457569fbc34c7db"
          },
          "dependencies": [
            "module.networking.aws_route_table.private_route_table",
            "module.networking.aws_subnet.private_subnet_2",
            "module.networking.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association_1",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c20d63ebb32651fe",
            "route_table_id": "rtb-0730a49fa8b89d3ac",
            "subnet_id": "subnet-0c6ecc491e63061f0"
          },
          "dependencies": [
            "module.networking.aws_route_table.public_route_table",
            "module.networking.aws_subnet.public_subnet_1",
            "module.networking.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association_2",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-014044d685da1e0e5",
            "route_table_id": "rtb-0730a49fa8b89d3ac",
            "subnet_id": "subnet-0ade29de7350c66b2"
          },
          "dependencies": [
            "module.networking.aws_route_table.public_route_table",
            "module.networking.aws_subnet.public_subnet_2",
            "module.networking.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851725327027:subnet/subnet-08ae6d038f636f2f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08ae6d038f636f2f6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725327027",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Udemy Private subnet 2"
            },
            "tags_all": {
              "Name": "Udemy Private subnet 2"
            },
            "vpc_id": "vpc-04ac9d9c2a5bcfed8"
          },
          "dependencies": [
            "module.networking.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851725327027:subnet/subnet-09457569fbc34c7db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09457569fbc34c7db",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725327027",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Udemy Private subnet 2"
            },
            "tags_all": {
              "Name": "Udemy Private subnet 2"
            },
            "vpc_id": "vpc-04ac9d9c2a5bcfed8"
          },
          "dependencies": [
            "module.networking.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851725327027:subnet/subnet-0c6ecc491e63061f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c6ecc491e63061f0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725327027",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Udemy Public subnet 1"
            },
            "tags_all": {
              "Name": "Udemy Public subnet 1"
            },
            "vpc_id": "vpc-04ac9d9c2a5bcfed8"
          },
          "dependencies": [
            "module.networking.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851725327027:subnet/subnet-0ade29de7350c66b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ade29de7350c66b2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725327027",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Udemy Public subnet 2"
            },
            "tags_all": {
              "Name": "Udemy Public subnet 2"
            },
            "vpc_id": "vpc-04ac9d9c2a5bcfed8"
          },
          "dependencies": [
            "module.networking.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851725327027:vpc/vpc-04ac9d9c2a5bcfed8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09d5fa958f203e393",
            "default_route_table_id": "rtb-01517d24ab08ffcc7",
            "default_security_group_id": "sg-0787fb34d28497443",
            "dhcp_options_id": "dopt-09141da0d8e5effd8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04ac9d9c2a5bcfed8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01517d24ab08ffcc7",
            "owner_id": "851725327027",
            "tags": {
              "Name": "Udemy demo VPC"
            },
            "tags_all": {
              "Name": "Udemy demo VPC"
            }
          }
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_security_group",
      "provider": "module.security.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851725327027:security-group/sg-01d98d5213f38bc6d",
            "description": "Udemy private_security_group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01d98d5213f38bc6d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04783f74467dd9175"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04783f74467dd9175"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "private_security_group",
            "name_prefix": "",
            "owner_id": "851725327027",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04ac9d9c2a5bcfed8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.my_vpc",
            "module.security.aws_security_group.public_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_security_group",
      "provider": "module.security.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851725327027:security-group/sg-04783f74467dd9175",
            "description": "Udemy public_security_group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04783f74467dd9175",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "public_security_group",
            "name_prefix": "",
            "owner_id": "851725327027",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04ac9d9c2a5bcfed8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.my_vpc"
          ]
        }
      ]
    }
  ]
}